--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     width: 100%;
     height: 60px;
-    background-color:#FF0000;
+    background-color:#FFFFFF;
     box-shadow: 0px 5px 5px 0px  #ddd;
     /* position: fixed; */
     top: 0;
